Added  heading two in file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<h2>This is my first git html file</h2>
+<h1>This is my first git heading html file</h1>
+<h2>This is my second git heading html file</h2>
